--- a/MoviesList/Info.plist
+++ b/MoviesList/Info.plist
@@ -12,6 +12,14 @@
 				<string>com.googleusercontent.apps.106395972821-3178ooj723n9p60t53bov8s1tjoi1nub</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>moviesapp</string>
+			</array>
+		</dict>
 	</array>
 	<key>GIDClientID</key>
 	<string>106395972821-3178ooj723n9p60t53bov8s1tjoi1nub.apps.googleusercontent.com</string>
